syntax = "proto3";

package pb;

// The Producersvc service definition.
service Producersvc {
    
    rpc Sum (SumRequest) returns (SumReply) {
    }

    rpc Concat (ConcatRequest) returns (ConcatReply) {
    }

    rpc Produce (ProduceRequest) returns (ProduceReply) {
    }
}

message SumRequest {
    int64 a = 1;
    int64 b = 2;
}

message SumReply {
    int64 rs = 1;
    string err = 2;
}

message ConcatRequest {
    string a = 1;
    string b = 2;
}

message ConcatReply {
    string rs = 1;
    string err = 2;
}

message ProduceRequest {
    string topic = 1;
    string msg = 2;
}

message ProduceReply {
    string rs = 1;
    string err = 2;
}
